<resources>
    <string name="app_name">My Application</string>

    <string name="txtTitle">ป้ายจราจร</string>
    <string name="moreInfo">More Info</string>
    <string name="aboutMe">About Me</string>
    <string name="name1"><b> ชิ่อ </b>นาย วิรัฐพงศ์ เกษมเรือสกุล </string>
    <string name="name2"><b> รหัสนักศึกษา </b>5711020660016 </string>
    <string name="name3"><b> หลักสูตร: </b>วิทยาการคอมพิวเตอร์ </string>
    <string name="Facebook"><b> Facebook: </b> JoWirattapong Kasemrueangsakul</string>
    <string name="name4"><b> เบอร์โทร </b> 0828129224</string>
    <string name="Back">BACK</string>
</resources>
