<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.superjowtf.myapplication.MainActivity"
    android:background="@drawable/bg11">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textSize="35sp"
        tools:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/livTraffic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layButton"
        android:layout_below="@+id/txtTitle"
        android:layout_margin="@dimen/my_margin"
        android:background="#90ffffff" />

    <LinearLayout
        android:id="@+id/layButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_weight="1"
            android:onClick="onClickMoreInfo"
            android:text="@string/moreInfo" />

        <Button
            android:id="@+id/btnAboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aboutMe"
            android:onClick="onClickAboutme"/>
    </LinearLayout>
</RelativeLayout>
